# OpenMBD

./: .gitignore  README.md
lib/: README.md
native/: CMakeLists.txt  OcctBridge.cpp  OcctBridge.h  README.md
schemas/: README.md
src/: BitmapHandler.cs  MBDDataModel.cs  OcctBridge.cs  OpenMBD.csproj  PdfReportExporter.cs  PmiExtractionService.cs  QifExporter.cs  Step242Exporter.cs  SwAddin.cs
